--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -33,7 +33,7 @@ jobs:
       run: cordova plugin add cordova-plugin-sms-receiver-sender || true
 
     - name: Build APK
-      run: cordova build android --release
+      run: cordova build android --release -- --packageType=apk
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
